<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/FAQHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="24dp"
            android:textColor="@color/accentuate"
            android:text="Frequently Asked Questions"/>
        <TextView
            android:id="@+id/Question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/Question1Q"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="14dp"
            android:text="@string/Question1A"
            />

        <TextView
            android:id="@+id/Question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/Question2Q"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="14dp"
            android:text="@string/Question2A"/>

        <TextView
            android:id="@+id/Question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/Question3Q"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="14dp"
            android:text="@string/Question3A"/>

        <TextView
            android:id="@+id/Question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:text="@string/Question4Q"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="14dp"
            android:text="@string/Question4A"/>

        <TextView
            android:id="@+id/Question5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:text="@string/Question5Q"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="14dp"
            android:text="@string/Question5A"/>


    </LinearLayout>


</ScrollView>