<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/chooseScentTitle"
            android:textColor="@color/accentuate"
            android:padding="25dp"
            android:textSize="24sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="Choosing a lacing agent to preserve your hair"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"

            android:text="@string/chooseScentBody"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/chooseScentProductList"/>
    </LinearLayout>


</ScrollView>