<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/create_header_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_below="@id/create_header_image"
            android:id="@+id/create_getStarted_section"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/chooseBase_text_view"
                android:textColor="@color/white"
                android:fontFamily="cursive"
                android:layout_margin="60dp"
                android:textSize="@android:dimen/app_icon_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseBase"
                android:clickable="true"
                android:onClick="chooseYourBase"
                />

            <TextView
                android:id="@+id/chooseOil_text_view"
                android:textColor="@color/white"
                android:fontFamily="cursive"
                android:layout_margin="60dp"
                android:textSize="@android:dimen/app_icon_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseOil"
                android:clickable="true"
                android:onClick="chooseYourOil"/>

            <TextView
                android:id="@+id/chooseScent_text_view"
                android:textColor="@color/white"
                android:fontFamily="cursive"
                android:layout_margin="60dp"
                android:textSize="@android:dimen/app_icon_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseScent"
                android:clickable="true"
                android:onClick="chooseYourScent"/>
            <Button
                android:id="@+id/button_begin_build"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/startCreatingButton"
                android:onClick="beginBuild"
                android:background="@color/accentuate"/>
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>